--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@
     background-color: #A9D6E5;
     border: 3px solid #012A4A;
     border-radius: 20px;
+
+    font-size: 55px;
+    font-weight: bold;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #clear-delete{
