--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@
     align-items: center;
 }
 
+#display{
+    margin-left: 320px;
+}
+
 #clear-delete{
     display: flex;
     flex-direction: row;
