--- a/style.css
+++ b/style.css
@@ -113,6 +113,12 @@
     font-size: larger;
     font-weight: bolder;
     margin-top: 800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+img{
+    margin-right: 15px;
 }
 
 #aaa{
